@@ -304,15 +304,57 @@
         <profile>
             <id>test</id>
             <properties>
+                <test.heap>512m</test.heap>
                 <surefire.groups>smoke, query, index</surefire.groups>
+                <surefire.excludedGroups>large</surefire.excludedGroups>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes combine.self="override"/>
+                            <groups>${surefire.groups}</groups>
+                            <excludedGroups>${surefire.excludedGroups}</excludedGroups>
+                            <forkCount>1</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <parallel>classes</parallel>
+                            <threadCountClasses>4</threadCountClasses>
+                            <argLine>-Xmx512m --add-modules=jdk.incubator.vector</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
             <id>ci</id>
             <properties>
+                <test.heap>1g</test.heap>
                 <surefire.groups>smoke, query, index, query-full, storage, concurrency, network</surefire.groups>
+                <surefire.excludedGroups>large</surefire.excludedGroups>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes combine.self="override"/>
+                            <groups>${surefire.groups}</groups>
+                            <excludedGroups>${surefire.excludedGroups}</excludedGroups>
+                            <forkCount>2</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <parallel>classes</parallel>
+                            <threadCountClasses>2</threadCountClasses>
+                            <argLine>-Xmx1g --add-modules=jdk.incubator.vector</argLine>
+                            <systemPropertyVariables>
+                                <diesel.largeTests>${diesel.largeTests}</diesel.largeTests>
+                                <diesel.runAllTestsSample>true</diesel.runAllTestsSample>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
